--- a/vignettes/PathwaySpace.Rmd
+++ b/vignettes/PathwaySpace.Rmd
@@ -122,18 +122,18 @@ vertexSignal(pspace1)
 
 ## Circular projection
 
-Following that, we will use the `circularProjection()` function to project the network signals, using the `weibullDecay()` function with default settings. We set `knn = 1`, defining the contributing vertices for signal convolution. In this case, each *null-signal position* will receive the projection from a single *vertex-signal position* (*i.e.* from the nearest signal source in the pathway space). We then create a landscape image using the `plotImageSpace()` function.
+Following that, we will use the `circularProjection()` function to project the network signals, using the `weibullDecay()` function with default settings. We set `knn = 1`, defining the contributing vertices for signal convolution. In this case, each *null-signal position* will receive the projection from a single *vertex-signal position* (*i.e.* from the nearest signal source in the pathway space). We then create a landscape image using the `plotPathwaySpace()` function.
 
 ```{r Circular projection - 1, eval=FALSE, message=FALSE, out.width="70%"}
 # Run network signal projection
 pspace1 <- circularProjection(pspace1, knn = 1, pdist = 0.4)
 
 # Plot a PathwaySpace image
-plotImageSpace(pspace1, marks = TRUE)
+plotPathwaySpace(pspace1, marks = TRUE)
 ```
 
 ```{r fig3.png, eval=TRUE, message=FALSE, echo=FALSE, include=FALSE, purl=FALSE}
-# gg <- plotImageSpace(pspace1, marks = TRUE)
+# gg <- plotPathwaySpace(pspace1, marks = TRUE)
 # ggsave(filename = "./figures/fig3.png", height=3.5, width=4.7, 
 #   units="in", device="png", dpi=250, plot=gg)
 ```
@@ -142,18 +142,18 @@ plotImageSpace(pspace1, marks = TRUE)
 knitr::include_graphics("figures/fig3.png")
 ```
 
-The `pdist` term determines a distance unit for the signal convolution related to the pathway space. This distance unit will affect the extent over which the convolution operation projects the signal in the pathway space. Next, we reassess the same *PathwaySpace* object using `knn = 2`. The user can also customize a few arguments in `plotImageSpace()` function, which is a wrapper to create dedicated *ggplot* graphics for *PathwaySpace-class* objects. 
+The `pdist` term determines a distance unit for the signal convolution related to the pathway space. This distance unit will affect the extent over which the convolution operation projects the signal in the pathway space. Next, we reassess the same *PathwaySpace* object using `knn = 2`. The user can also customize a few arguments in `plotPathwaySpace()` function, which is a wrapper to create dedicated *ggplot* graphics for *PathwaySpace-class* objects. 
 
 ```{r Circular projection - 2, eval=FALSE, message=FALSE, out.width="70%"}
 # Re-run the network signal projection with 'knn = 2'
 pspace1 <- circularProjection(pspace1, knn = 2, pdist = 0.4)
 
 # Plot the PathwaySpace image
-plotImageSpace(pspace1, marks = c("n3","n4"), theme = "th2")
+plotPathwaySpace(pspace1, marks = c("n3","n4"), theme = "th2")
 ```
 
 ```{r fig4.png, eval=TRUE, message=FALSE, echo=FALSE, include=FALSE, purl=FALSE}
-# gg <- plotImageSpace(pspace1, marks = c("n3","n4"), theme = "th2")
+# gg <- plotPathwaySpace(pspace1, marks = c("n3","n4"), theme = "th2")
 # ggsave(filename = "./figures/fig4.png", height=3.5, width=4.7,
 #   units="in", device="png", dpi=250, plot=gg)
 ```
@@ -169,11 +169,11 @@ The decay function used in the signal projection was passed to the `circularProj
 pspace1 <- circularProjection(pspace1, knn = 2, pdist = 0.2, shape = 2)
 
 # Plot the PathwaySpace image
-plotImageSpace(pspace1, marks = "n1", theme = "th2")
+plotPathwaySpace(pspace1, marks = "n1", theme = "th2")
 ```
 
 ```{r fig5.png, eval=TRUE, message=FALSE, echo=FALSE, include=FALSE, purl=FALSE}
-# gg <- plotImageSpace(pspace1, marks = "n1", theme = "th2")
+# gg <- plotPathwaySpace(pspace1, marks = "n1", theme = "th2")
 # ggsave(filename = "./figures/fig5.png", height=3.5, width=4.7,
 #   units="in", device="png", dpi=250, plot=gg)
 ```
@@ -221,11 +221,11 @@ vertexSignal(pspace2) <- 1
 pspace2 <- polarProjection(pspace2, knn = 2, theta = 45, shape = 2)
 
 # Plot the PathwaySpace image
-plotImageSpace(pspace2, theme = "th2", marks = TRUE)
+plotPathwaySpace(pspace2, theme = "th2", marks = TRUE)
 ```
 
 ```{r fig7.png, eval=TRUE, message=FALSE, echo=FALSE, include=FALSE, purl=FALSE}
-# gg <- plotImageSpace(pspace2, theme = "th2", marks = TRUE)
+# gg <- plotPathwaySpace(pspace2, theme = "th2", marks = TRUE)
 # ggsave(filename = "./figures/fig7.png", height=3.5, width=4.7,
 #   units="in", device="png", dpi=250, plot=gg)
 ```
@@ -242,11 +242,11 @@ pspace2 <- polarProjection(pspace2, knn = 2, theta = 45, shape = 2,
   directional = TRUE)
 
 # Plot the PathwaySpace image
-plotImageSpace(pspace2, theme = "th2", marks = c("n1","n3","n4","n5"))
+plotPathwaySpace(pspace2, theme = "th2", marks = c("n1","n3","n4","n5"))
 ```
 
 ```{r fig8.png, eval=TRUE, message=FALSE, echo=FALSE, include=FALSE, purl=FALSE}
-# gg <- plotImageSpace(pspace2, theme = "th2", marks = c("n1","n3","n4","n5"))
+# gg <- plotPathwaySpace(pspace2, theme = "th2", marks = c("n1","n3","n4","n5"))
 # ggsave(filename = "./figures/fig8.png", height=3.5, width=4.7,
 #   units="in", device="png", dpi=250, plot=gg)
 ```
@@ -273,12 +273,12 @@ vertexSignal(pspace1)
 pspace1 <- circularProjection(pspace1, knn = 2, shape = 2)
 
 # Plot the PathwaySpace image
-plotImageSpace(pspace1, bg.color = "white", font.color = "grey20",
+plotPathwaySpace(pspace1, bg.color = "white", font.color = "grey20",
   marks = TRUE, mark.color = "magenta", theme = "th2")
 ```
 
 ```{r fig9.png, eval=TRUE, message=FALSE, echo=FALSE, include=FALSE, purl=FALSE}
-# gg <- plotImageSpace(pspace1, bg.color = "white", font.color = "grey20",
+# gg <- plotPathwaySpace(pspace1, bg.color = "white", font.color = "grey20",
 #   marks = TRUE, mark.color = "magenta", theme = "th2")
 # ggsave(filename = "./figures/fig9.png", height=3.5, width=4.7,
 #   units="in", device="png", dpi=250, plot=gg)
