--- a/vignettes/PathwaySpace.Rmd
+++ b/vignettes/PathwaySpace.Rmd
@@ -3,7 +3,7 @@ title: "*PathwaySpace*: Spatial projection of network signals along geodesic pat
 author: "The Cancer Genome Atlas Analysis Network."
 date: "`r Sys.Date()`"
 bibliography: bibliography.bib
-abstract: "<p>*PathwaySpace* is an R package that creates landscape images from graphs containing vertices (nodes), edges (lines), and a signal associated with the vertices. The package processes the signal using a convolution algorithm that considers the graph's topology to project the signal on a 2D space. *PathwaySpace* could have various applications, such as visualizing network data in a graphical format that highlights the relationships and signal strengths between vertices. It can be particularly useful for understanding the influence of signals through complex networks. By combining graph theory, signal processing, and visualization, the *PathwaySpace* package provides a novel way of representing network signals.</p>"
+abstract: "<p>*PathwaySpace* is an R package that creates landscape images from graphs containing vertices (nodes), edges (lines), and a signal associated with the vertices. The package processes the signal using a convolution algorithm that considers the graph's topology projecting the signal on a 2D space. *PathwaySpace* has various applications, such as visualizing network data in a graphical format that highlights the relationships and signal strengths between vertices. It can be particularly useful for understanding the influence of signals through complex networks. By combining graph theory, signal processing, and visualization, the *PathwaySpace* package provides a novel way of representing network signals.</p>"
 package: "`r BiocStyle::pkg_ver('PathwaySpace')`"
 output: 
   BiocStyle::html_document:
@@ -22,9 +22,15 @@ vignette: >
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+# Highlights
+* Produces landscape images with geodesic paths.
+* Applies a convolutional algorithm to project signals onto a 2D space.
+* Projects signals using decay functions to model signal attenuation.
+* Uses k-nearest neighbors to define contributing vertices for signal projection.
+
 # Overview
 
-For a given *igraph* object containing vertices, edges, and a signal associated with the vertices, the *PathwaySpace* performs a convolution operation, which involves a weighted combination of neighboring node signals based on the graph structure. **Figure 1** illustrates the convolution operation problem. Each vertex's signal is placed at a specific position in the 2D space. The `x` and `y` coordinates of this space correspond either to vertex-signal positions (*e.g.* red, green, and blue lollipops in **Fig.1A**) or null-signal positions for which no signal information is available (question marks in **Fig.1A**). Our model considers the vertex-signal positions as source points (or transmitters) and the null-signal positions as end points (or receivers). The signal values from vertex-signal positions are then projected to the null-signal positions according to a decay function, which will control how the signal values attenuate as they propagate across the 2D space. Available decay functions include linear [@Linear2023], exponential [@Exponential2017], and Weibull [@Weibull2018] functions (**Fig.1B**). For a given null-signal position, a k-nearest neighbors (kNN) algorithm is used to define the contributing vertices for signal convolution. The convolution operation combines the signals from these contributing vertices, considering their distances and signal strengths, and applies the decay function to model the attenuation of the signal. Users can adjust both the decay function's parameters and the value of k in the kNN algorithm. These parameters control how the signal decays, allowing users to explore different scenarios and observe how varying parameters influence the landscape image. The resulting image forms geodesic paths in which the signal has been projected from vertex- to null-signal positions, using a density metric to measure the signal intensity along these paths.
+For a given *igraph* object containing vertices, edges, and a signal associated with the vertices, *PathwaySpace* performs a convolution operation, which involves a weighted combination of neighboring node signals based on the graph structure. **Figure 1** illustrates the convolution operation problem. Each vertex's signal is placed at a specific position in the 2D space. The `x` and `y` coordinates of this space correspond either to vertex-signal positions (*e.g.* red, green, and blue lollipops in **Fig.1A**) or null-signal positions for which no signal information is available (question marks in **Fig.1A**). Our model considers the vertex-signal positions as source points (or transmitters) and the null-signal positions as end points (or receivers). The signal values from vertex-signal positions are then projected to the null-signal positions according to a decay function, which will control how the signal values attenuate as they propagate across the 2D space. Available decay functions include linear, exponential, and Weibull functions (**Fig.1B**). For a given null-signal position, a k-nearest neighbors (kNN) algorithm is used to define the contributing vertices for signal convolution. The convolution operation combines the signals from these contributing vertices, considering their distances and signal strengths, and applies the decay function to model the attenuation of the signal. Users can adjust both the decay function's parameters and the value of k in the kNN algorithm. These parameters control how the signal decays, allowing users to explore different scenarios and observe how varying parameters influence the landscape image. The resulting image forms geodesic paths in which the signal has been projected from vertex- to null-signal positions, using a density metric to measure the signal intensity along these paths.
 
 ```{r fig1, echo=FALSE, fig.cap="Signal processing addressed by the *PathwaySpace* package. **A**) Representation of a graph superimposed on a 2D coordinate system. Each lollipop icon represents a graph vertex (referred to as vertex-signal positions), while question marks highlight points in the 2D space where no signal information is available (referred to as null-signal positions). **B**) Signal decay profiles of linear, exponential, and Weibull decay functions.", out.width = '90%', purl=FALSE}
 knitr::include_graphics("figures/fig1.png")
@@ -41,7 +47,7 @@ library(ggplot2)
 
 ## Setting basic input data
 
-This section will create an *igraph* object containing a binary signal associated to each vertex. The graph layout is configured manually to ensure that users can easily view all the relevant arguments needed to prepare the input data for the *PathwaySpace* package. The *igraph*'s `make_star()` function creates a star-like graph and the `V()` function is used to set attributes for the vertices. The *PathwaySpace* package will require that all vertives have `x`, `y`, and `name` attributes.
+This section will create an *igraph* object containing a binary signal associated to each vertex. The graph layout is configured manually to ensure that users can easily view all the relevant arguments needed to prepare the input data for the *PathwaySpace* package. The *igraph*'s `make_star()` function creates a star-like graph and the `V()` function is used to set attributes for the vertices. The *PathwaySpace* package will require that all vertices have `x`, `y`, and `name` attributes.
 
 ```{r Making a toy igraph - 1, eval=TRUE, message=FALSE}
 # Make a 'toy' undirected igraph
@@ -292,6 +298,177 @@ knitr::include_graphics("figures/fig9.png")
 ```
 
 Note that the original signal vector was rescale to `[-1, +1]`. If the signal vector is `>=0`, then it will be rescaled to `[0, 1]`; if the signal vector is `<=0`, it will be rescaled to `[-1, 0]`; and if the signal vector is in `(-Inf, +Inf)`, then it will be rescaled to `[-1, +1]`. To override this signal processing, simply set the `rescale` argument to `FALSE` in the projection functions.
+
+
+# *PathwaySpace* decoration
+
+In order to enhance clarity and make it less likely for viewers to miss important details of large graphs, in this section we introduce visual elements to large *PathwaySpace* images. We will use an *igraph* object with `n = 12990` vertices to create a large *PathwaySpace* object, upon which we will project binary signals from a relatively small number of vertices. This example will emphasize clusters of vertices forming *summits*, but it might also come at the cost of reduced clarity in displaying the graph's overall structure, particularly in regions far from the summit areas. In order to balance between emphasizing clusters and maintaining the visibility of the entire graph structure, we will outline graph silhouettes as decoration elements in the *PathwaySpace* image.
+
+```{r Load packages - case study, eval=FALSE, message=FALSE}
+#--- Load required packages for this section
+library(PathwaySpace)
+library(RGraphSpace)
+library(igraph)
+library(ggplot2)
+```
+
+## Loading a large graph
+
+Next, we will load an *igraph* object with `n = 12990` vertices, containing gene interaction data available from the *Pathway Commons* database (version 12) [@Rodchenkov2019].
+
+```{r PathwaySpace decoration - 1, eval=TRUE, message=FALSE, results='hide'}
+# Load a large igraph object
+data("PCv12_pruned_igraph", package = "PathwaySpace")
+
+# Check number of vertices
+length(PCv12_pruned_igraph)
+# [1] 12990
+
+# Check vertex names
+head(V(PCv12_pruned_igraph)$name)
+# [1] "A1BG" "AKT1" "CRISP3" "GRB2" "PIK3CA" "PIK3R1"
+
+# Get top-connected nodes for visualization
+top10hubs <- igraph::degree(PCv12_pruned_igraph)
+top10hubs <- names(sort(top10hubs, decreasing = TRUE)[1:10])
+head(top10hubs)
+# [1] "GNB1" "TRIM28" "RPS27A" "CTNNB1" "TP53" "ACTB"
+```
+
+Depending on the graphics devices available in the current *R* session, rendering a large graph can take a while. To visualize the graph layout, next we use the `plotGraphSpace()` function from the *RGraphSpace* package for plotting optimization.
+
+```{r PathwaySpace decoration - 2, eval=FALSE, message=FALSE}
+## Visualize the graph layout labeled with 'top10hubs' nodes
+plotGraphSpace(PCv12_pruned_igraph, marks = top10hubs, 
+  mark.color = "blue", theme = "th3")
+```
+
+```{r fig10.png, eval=TRUE, message=FALSE, echo=FALSE, include=FALSE, purl=FALSE}
+# gg <- plotGraphSpace(PCv12_pruned_igraph, marks = top10hubs,
+# mark.color = "blue",  theme = "th3", mark.size = 2)
+# ggsave(filename = "./figures/fig10.png", height=4, width=5,
+#   units="in", device="png", dpi=200, plot=gg)
+```
+
+```{r fig10, echo=FALSE, out.width = '70%', purl=FALSE}
+knitr::include_graphics("figures/fig10.png")
+```
+
+
+We will also load gene sets from the *MSigDB* collection [@Liberzon2015], which are subsequently used to project a binary signal in the *PathwaySpace* image.
+
+```{r PathwaySpace decoration - 3, eval=FALSE, message=FALSE}
+# Load a list with Hallmark gene sets
+data("Hallmarks_v2023_1_Hs_symbols", package = "PathwaySpace")
+
+# There are 50 gene sets in "hallmarks"
+length(hallmarks)
+# [1] 50
+
+# We will use the 'HALLMARK_P53_PATHWAY' (n=200 genes) for demonstration
+length(hallmarks$HALLMARK_P53_PATHWAY)
+# [1] 200
+```
+
+## Running *PathwaySpace*
+
+We now follow the *PathwaySpace* pipeline as explaned in the previous sections, that is, using the `buildPathwaySpace()` constructor to initialize a new *PathwaySpace* object with the *Pathway Commons* interactions.
+
+```{r PathwaySpace decoration - 4, eval=FALSE, message=FALSE}
+# Run the PathwaySpace constructor
+pspace_PCv12 <- buildPathwaySpace(g=PCv12_pruned_igraph, nrc=500)
+# Note: 'nrc' sets the number of rows and columns of the
+# image space, which will affect the image resolution (in pixels)
+```
+
+...and now we mark the *HALLMARK_P53_PATHWAY* genes in the *PathwaySpace* object.
+
+```{r PathwaySpace decoration - 5, eval=FALSE, message=FALSE}
+# Intersect Hallmark genes with the PathwaySpace
+hallmarks <- lapply(hallmarks, intersect, y = names(pspace_PCv12) )
+
+# After intersection, the 'HALLMARK_P53_PATHWAY' dropped to n=173 genes
+length(hallmarks$HALLMARK_P53_PATHWAY)
+# [1] 173
+
+# Set a binary signal (1s) to 'HALLMARK_P53_PATHWAY' genes
+vertexSignal(pspace_PCv12) <- 0
+vertexSignal(pspace_PCv12)[ hallmarks$HALLMARK_P53_PATHWAY ] <- 1
+```
+
+...and run the `circularProjection()` function.
+
+```{r PathwaySpace decoration - 6, eval=FALSE, message=FALSE}
+# Run network signal projection
+pspace_PCv12 <- circularProjection(pspace_PCv12)
+plotPathwaySpace(pspace_PCv12, title="HALLMARK_P53_PATHWAY", 
+  marks = top10hubs, mark.size = 2, theme = "th3")
+```
+
+```{r fig11.png, eval=FALSE, message=FALSE, echo=FALSE, purl=FALSE}
+# gg <- plotPathwaySpace(pspace_PCv12, theme = "th3",
+#   title="HALLMARK_P53_PATHWAY", marks = top10hubs,
+#   mark.size = 2, font.size = 0.8)
+# ggsave(filename = "./figures/fig11.png", plot=gg, height=4,
+#   width=5, units="in", device="png", dpi=250)
+```
+
+```{r fig11, echo=FALSE, out.width = '80%', purl=FALSE}
+knitr::include_graphics("figures/fig11.png")
+```
+
+Note that this image emphasizes groups of vertices forming *summits*, but it misses the outline of the graph structure, which faded with the signal that reaches the furthermost points of the network.
+
+## Mapping silhouettes
+
+Next, we will decorate the *PathwaySpace* image with graph's silhouettes.
+
+```{r PathwaySpace decoration - 7, eval=FALSE, message=FALSE}
+# Add silhouettes
+pspace_PCv12 <- silhouetteMapping(pspace_PCv12)
+plotPathwaySpace(pspace_PCv12, title="HALLMARK_P53_PATHWAY", 
+  marks = top10hubs, mark.size = 2, theme = "th3")
+```
+
+```{r fig12.png, eval=FALSE, message=FALSE, echo=FALSE, purl=FALSE}
+# gg <- plotPathwaySpace(pspace_PCv12, theme = "th3", 
+#   title="HALLMARK_P53_PATHWAY", marks = top10hubs, 
+#   mark.size = 2, font.size = 0.8)
+# ggsave(filename = "./figures/fig12.png", plot=gg, height=4,
+#   width=5, units="in", device="png", dpi=250)
+```
+
+```{r fig12, echo=FALSE, out.width = '80%', purl=FALSE}
+knitr::include_graphics("figures/fig12.png")
+```
+
+## Mapping summits
+
+The summits represent regions within the graph that exhibit signal values that are notably higher than the baseline level. These regions may be of interest for downstream analyses. One potential downstream analysis is to determine which vertices projected the original input signal. This could provide insights into the communities within these summit regions. One may also wish to explore other vertices within the summits, by querying associations with the original input gene set. In order to extract vertices within summits, next we use the `summitMapping()` function, which also decorate summits with contour lines.
+
+```{r PathwaySpace decoration - 9, eval=FALSE, message=FALSE}
+# Mapping summits
+pspace_PCv12 <- summitMapping(pspace_PCv12, minsize = 50)
+plotPathwaySpace(pspace_PCv12, title="HALLMARK_P53_PATHWAY", theme = "th3")
+```
+
+```{r fig13.png, eval=FALSE, message=FALSE, echo=FALSE, purl=FALSE}
+# gg <- plotPathwaySpace(pspace_PCv12, title="HALLMARK_P53_PATHWAY", 
+#   theme = "th3", font.size = 0.8,)
+# ggsave(filename = "./figures/fig13.png", plot=gg, height=4,
+#   width=5, units="in", device="png", dpi=250)
+```
+
+```{r fig13, echo=FALSE, out.width = '80%', purl=FALSE}
+knitr::include_graphics("figures/fig13.png")
+```
+
+```{r PathwaySpace decoration - 10, eval=FALSE, message=FALSE}
+# Extracting summits from a PathwaySpace
+summits <- getPathwaySpace(pspace_PCv12, "summits")
+class(summits)
+# [1] "list"
+```
 
 # Case study
 
